# YoloDetectionBeer

./: MakeFile  Makefile  Objetivo do Projeto.txt  README  makefile  pyproject.toml
docs/: Objetivo do Projeto.txt
src/app/: __main__.py
